# haboost

./: .gitignore  AGENTS.md  AURORA.md  Cargo.toml  Cross.toml  LICENSE  PLAN_COMMENTS.md  README.md  SORTING_REFACTORING_PLAN.md  aarch64_build.sh  arm_build.sh  com.lmaxyz.Habre.desktop  deploy.sh  x86_64_rpm_build.sh
rpm/: com.lmaxyz.Haboost.desktop  com.lmaxyz.Habre.spec
src/: app.rs  article_details.rs  articles_list.rs  hubs_list.rs  main.rs  settings.rs  state.rs  storage.rs  view_stack.rs  widgets.rs
src/aurora_services/: open_uri.rs
src/habr_client/: article.rs  comment.rs  html_parse.rs  hub.rs  mod.rs
src/views/: article_details.rs  articles_list.rs  comments.rs  hubs_list.rs  mod.rs  saved_articles_list.rs  settings.rs
