[package]
name = "habre"
version = "0.1.0"
edition = "2021"

[dependencies]
maliit = { path = "../../rust/maliit" }
eframe = { version = "0.31", default-features = false, features = [
    "glow",
    "default_fonts",
    "wayland",
    "accesskit",
] }
egui_extras = { version = "0.31", default-features = false, features = [
    "image",
    "http",
] }
egui_flex = "0.3"

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "bmp",
    "gif",
    "webp",
] }
reqwest = { version = "0.12.*", default-features = false, features = [
    "rustls-tls",
    # "default-tls",
    "http2",
] }
tokio = { version = "1.41.0", default-features = false, features = [
    "rt-multi-thread",
    "time",
] }
scraper = "0.23"
chrono = "0.4"
egui_virtual_keyboard = "0.1.3"


[package.metadata.generate-rpm]
name = "com.lmaxyz.Habre"
license = "Apache-2.0"
summary = "Egui Habr client"
release = "1"
url = "https://github.com/lmaxyz/habre"
assets = [
    { source = "target/armv7-unknown-linux-gnueabihf/release/habre", dest = "/usr/bin/com.lmaxyz.Habre", mode = "755" },
    { source = "rpm/com.lmaxyz.Habre.desktop", dest = "/usr/share/applications/com.lmaxyz.Habre.desktop", mode = "644" },
    { source = "rpm/icons/86x86/com.lmaxyz.Habre.png", dest = "/usr/share/icons/hicolor/86x86/apps/com.lmaxyz.Habre.png", mode = "644" },
    { source = "rpm/icons/108x108/com.lmaxyz.Habre.png", dest = "/usr/share/icons/hicolor/108x108/apps/com.lmaxyz.Habre.png", mode = "644" },
    { source = "rpm/icons/128x128/com.lmaxyz.Habre.png", dest = "/usr/share/icons/hicolor/128x128/apps/com.lmaxyz.Habre.png", mode = "644" },
    { source = "rpm/icons/172x172/com.lmaxyz.Habre.png", dest = "/usr/share/icons/hicolor/172x172/apps/com.lmaxyz.Habre.png", mode = "644" },
]

[patch.crates-io]
winit = { git = "https://github.com/lmaxyz/winit", branch = "aurora" }
glutin = { git = "https://github.com/lmaxyz/glutin", branch = "egl_debug" }

# wgpu = { git = "https://github.com/lmaxyz/wgpu", branch = "v23" }
