[package]
name = "haboost"
version = "0.7.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "glow",
    "default_fonts",
    "wayland",
    "accesskit",
] }
egui_extras = { version = "0.33", default-features = false, features = [
    "image",
    "http",
] }
egui_flex = "0.5"
egui-theme-switch = "0.5"

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "bmp",
    "gif",
    "webp",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    # "default-tls",
    "http2",
] }
tokio = { version = "1.48", default-features = false, features = [
    "rt-multi-thread",
    "time",
] }
scraper = "0.24"
chrono = "0.4"
toml = "0.9"
log = "0.4"
dbus = "0.9"

[profile.release]
strip = true

[package.metadata.generate-rpm]
name = "com.lmaxyz.Haboost"
license = "Apache-2.0"
summary = "Egui Habr client"
release = "1"
url = "https://github.com/lmaxyz/habre"
assets = [
    { source = "target/release/haboost", dest = "/usr/bin/com.lmaxyz.Haboost", mode = "755" },
    { source = "rpm/com.lmaxyz.Haboost.desktop", dest = "/usr/share/applications/com.lmaxyz.Haboost.desktop", mode = "644" },
    { source = "rpm/icons/86x86/com.lmaxyz.Haboost.png", dest = "/usr/share/icons/hicolor/86x86/apps/com.lmaxyz.Haboost.png", mode = "644" },
    { source = "rpm/icons/108x108/com.lmaxyz.Haboost.png", dest = "/usr/share/icons/hicolor/108x108/apps/com.lmaxyz.Haboost.png", mode = "644" },
    { source = "rpm/icons/128x128/com.lmaxyz.Haboost.png", dest = "/usr/share/icons/hicolor/128x128/apps/com.lmaxyz.Haboost.png", mode = "644" },
    { source = "rpm/icons/172x172/com.lmaxyz.Haboost.png", dest = "/usr/share/icons/hicolor/172x172/apps/com.lmaxyz.Haboost.png", mode = "644" },
]

[patch.crates-io]
winit = { git = "https://github.com/lmaxyz/winit", branch = "aurora" }
glutin = { git = "https://github.com/lmaxyz/glutin", branch = "aurora_device_fix" }
